--- a/00-A2/01-Exercise1.Rmd
+++ b/00-A2/01-Exercise1.Rmd
@@ -1,28 +1,3 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
-
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
 
 \begin{document}
 
@@ -52,12 +27,12 @@ A 3 - dimensional discrete Markov Chain defined by the following states:
 North, South, West
 
 The transition matrix (by rows) is defined as follows:
-\begin{array}{cccc}
-&amp; North &amp; South &amp; West\\
-North &amp; 0.3 &amp; 0.3 &amp; 0.4\\
-South &amp; 0.4 &amp; 0.4 &amp; 0.2\\
-West &amp; 0.5 &amp; 0.3 &amp; 0.2\\
-\end{array}
+
+| North | South | West\\
+North | 0.3 | 0.3 | 0.4\\
+South | 0.4 | 0.4 | 0.2\\
+West | 0.5 | 0.3 | 0.2\\
+
 
 ## Exercise 1
 
@@ -275,10 +250,10 @@ steadyStates(MCZone)
 
 
 $$\begin{eqnarray*}
-        \pi P &amp;=&amp; \pi   \qquad (  \pi \mbox{ is unchanged by  P }.) \\
-              &amp;=&amp; \pi I \\
-              &amp; &amp; \\
-\pi ( P − I ) &amp;=&amp; \boldsymbol{0}  \\
+        \pi P |=| \pi   \qquad (  \pi \mbox{ is unchanged by  P }.) \\
+              |=| \pi I \\
+              | | \\
+\pi ( P − I ) |=| \boldsymbol{0}  \\
 \end{eqnarray*}$$
 
 Use transposition to re-arrange as a standard system of linear equations in form $Ax=b$
