--- a/00-B2/02-Exercise2.Rmd
+++ b/00-B2/02-Exercise2.Rmd
@@ -1,30 +1,7 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
 
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
+Exercise 1
+===================================================
 Q. 2) ABC General Insurance Company Limited has sold total of 1000 insurance policies under 3
 type of insurance, where each type of insurance gives rise to a maximum of one claim per year.
 The insurer hold the following portfolio:
@@ -59,6 +36,7 @@ the results.
 
 
 Solution 2:
+===================================================
 i) set.seed(2000)
 rate1 <- 0.006
 q1 <- 0.002
@@ -93,11 +71,11 @@ Sumofclaims_sim
 260.0237473 58.7869147 0.0000000 824.1810537 121.5688946 393.4891939
 34.2667969 0.0000000 0.0000000 323.9416166 0.0000000 47.5719195
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+==================================================================
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+==================================================================
 400.2364413 155.3775077
 ii) summary(Sumofclaims_sim)
 hist(Sumofclaims_sim)
@@ -117,5 +95,5 @@ The distribution seems to follow exponential distribution, which is consistent w
 distribution of claims.
 
 
-\end{document}
+
 
