--- a/00-B2/05-Part5.Rmd
+++ b/00-B2/05-Part5.Rmd
@@ -1,33 +1,6 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
 
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
-
-\large 
-\noindent A particle is moving on the graph below by starting on a randomly chosen vertex (each with
+A particle is moving on the graph below by starting on a randomly chosen vertex (each with
 the same probability) and at each time step moving along one of the adjacent edges to a
 neighbouring vertex, choosing the edge with equal probability and independently of all
 previous movements.
@@ -36,11 +9,11 @@ previous movements.
 
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
+===================%%%%
+
 Create a matrix with the transition matrix with probabilities using the state names as
 {A,B,C,D,E,F,G} and plot the transition matrix graph. 
-\begin{framed}\begin{verbatim}
+```{r}
  #Create a matrix with the transition probabilities.
 
 Matrix2<- matrix(c(
@@ -55,12 +28,11 @@ byrow=TRUE,nrow=7)
 
 Matrix2
 
-\end{verbatim}\end{framed}
-
-\includegraphics[]{00-B2/images/TransitionMatrix.JPG}
+```
 
 
-\begin{framed}
+
+
 sum(Matrix2[1,])
 sum(Matrix2[2,])
 sum(Matrix2[3,])
@@ -68,7 +40,7 @@ sum(Matrix2[4,])
 sum(Matrix2[5,])
 sum(Matrix2[6,])
 sum(Matrix2[7,])
-\end{framed}
+
 
 
 
@@ -77,11 +49,11 @@ sum(Matrix2[7,])
 
 
 
-\begin{framed}\begin{verbatim}
+```{r}
 #Create a vector with state names
 statesmatrix1 <- c("A","B","C","D","E","F","G")
 statesmatrix1
-\end{verbatim}\end{framed}
+```
 
 
 <ol class="list-inline">
@@ -97,12 +69,12 @@ statesmatrix1
 
 
 
-\begin{framed}\begin{verbatim}
+```{r}
 transitionmat1<-
 new("markovchain",
 states=statesmatrix1,
 transitionMatrix=Matrix2)
-\end{verbatim}\end{framed}
+```
 
 
 
@@ -113,7 +85,7 @@ transitionMatrix=Matrix2)
 [1] "A" "B" "C" "D" "E" "F" "G"
 #Create the transition matrix
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+======================================
 
 
 transitionmat1
@@ -142,9 +114,9 @@ F 0.00 0.0000000 0.3333333 0.0000000 0.3333333 0.0000000 0.3333333
 G 0.00 0.5000000 0.0000000 0.0000000 0.0000000 0.5000000 0.0000000
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
-\subsection*{Exercise 2}
+===================%
+
+Exercise 2}
 What is the absorbing state in the transition matrix? Find the steady state or stationary
 distribution.
 
@@ -162,8 +134,9 @@ A B C D E F G
 
 
 
-\newpage 
-\subsection*{Exercise 3}
+
+Exercise 3
+========================
 
 How much time it will take to reach the steady state if the particle is starting from state
 A, B and C?
@@ -172,7 +145,7 @@ A, B and C?
 
 iii) # Time to reach steady state if particle starts from A
 
-\begin{verbatim}
+```{r}
 n=0
 starting=c(1,0,0,0,0,0,0)
 while(starting%*%Matrix2!=starting){
@@ -181,7 +154,7 @@ print(starting)
 n=n+1
 print(n)
 }    
-\end{verbatim}
+```
 
 [1] 54
 [,1] [,2] [,3] [,4] [,5] [,6] [,7]
@@ -190,10 +163,10 @@ print(n)
 There were 50 or more warnings (use warnings() to see the first 50)
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+============================
 # Time to reach steady state if particle starts from B
 
-\begin{verbatim}
+```{r}
 m=0
 starting=c(0,1,0,0,0,0,0)
 while(starting%*%Matrix2!=starting){
@@ -202,15 +175,15 @@ print(starting)
 m=m+1
 print(m)
 }    
-\end{verbatim}
+```
 
 [1,] 0.1 0.2007407 0.1992593 0.1004772 0.1492593 0.1507407 0.09952283
 [1] 54
 There were 50 or more warnings (use warnings() to see the first 50)
 # Time to reach steady state if particle starts from C
 
-\begin{framed}
-\begin{verbatim}
+
+```{r}
 p=0
 starting=c(0,0,1,0,0,0,0)
 
@@ -220,9 +193,9 @@ while(starting%*%Matrix2!=starting){
     p=p+1
     print(p))
 }    
-\end{verbatim}
-\end{framed}
+```
+
 [1,] 0.1 0.1993928 0.2006072 0.09960879 0.1506072 0.1493928 0.1003912
 [1] 56
 There were 50 or more warnings (use warnings() to see the first 50)
-\end{document}
+
