--- a/00-C1/02-Part2.Rmd
+++ b/00-C1/02-Part2.Rmd
@@ -1,63 +1,36 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
-\Large 
-\noindent The dataset “\texttt{Interest\_rates.csv}” contains a series of returns on bonds of maturities 
+The dataset “\texttt{Interest\_rates.csv}” contains a series of returns on bonds of maturities 
 1 year, 5 years, 10 years, 15 years, 20 years and 30 years (i.e. bonds that provide a
 return of the principal investment after 1, 5, 10, 15, 20 and 30 years respectively).
 
 
 
-\begin{framed} \begin{verbatim}
+ ```{r}
 interest_rates <- read.csv("Interest_rates.csv")
-\end{verbatim} \end{framed}
+``` 
 
 
-\newpage 
 
 
-\noindent Calculate the Pearson correlation coefficient matrix for this data.
+
+Calculate the Pearson correlation coefficient matrix for this data.
 Comment on the correlations between the data using the matrix from
 Exercise 1
 
 
 
-\begin{framed} \begin{verbatim}
+ ```{r}
 
 # read the data
 > interest_rates<-read.csv("Interest_rates.csv")
 # calculate the Pearson correlation coefficients
 
-\end{verbatim} \end{framed}
+``` 
 
 
-\begin{framed} \begin{verbatim}
+ ```{r}
  C <- cor(interest_rates, method="pearson")
-\end{verbatim} \end{framed}
+``` 
 
 Alternative solution
 cor(interest_rates)
@@ -112,27 +85,27 @@ X30.year
 1.0000000
 
 
-\end{verbatim} \end{framed}
+``` 
 
 
 
 The correlation matrix shows that there is strong (positive) correlation between returns on bonds of similar maturity.
 
 It also shows that the correlation between returns is weaker as the length of maturity between bonds increases.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
-\subsection*{Part 2}
-\noindent Perform a reduction of the dimension of the data using principal component analysis with the method of singular value decomposition.
+============================
 
-\noindent Your answer should include a summary of the principal component analysis.
-\begin{framed} 
-\begin{verbatim}
+Part 2}
+Perform a reduction of the dimension of the data using principal component analysis with the method of singular value decomposition.
+
+Your answer should include a summary of the principal component analysis.
+ 
+```{r}
 # carry out principal component analysis using SVD method
 
 pca <- prcomp(interest_rates)
-\end{verbatim} \end{framed}
+``` 
 
-\newpage
+
 (b) Suggest with reasons, using the output of the R analysis, how many components of the transformed data should be retained.
 
 
@@ -140,7 +113,7 @@ pca <- prcomp(interest_rates)
 
 
 
-\begin{framed} \begin{verbatim}
+ ```{r}
 
 
 
@@ -162,14 +135,14 @@ Standard deviation
 8.986e-05
 Proportion of Variance 8.000e-05
 Cumulative Proportion 1.000e+00
-\end{verbatim}
-\end{framed}
+```
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
 
-\begin{framed}
-\begin{verbatim}
+======================================
+
+
+
+```{r}
 
 > pca<-princomp(interest_rates)
 > summary(pca)
@@ -193,7 +166,7 @@ Proportion of Variance 0.0004112140 7.816163e-05
 Cumulative Proportion 0.9999218384 1.000000e+00
 
 
-\end{verbatim} \end{framed}
+``` 
 
 
 The R-output shows that the proportion of variance explained by the first two principal
@@ -202,11 +175,11 @@ components is c.98\%, and by the first three components c.99%.
 Therefore it would be reasonable to reduce the dimensions of the dataset by using the
 first two (or three) principal components.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
+=========================================================%%
+
 Candidates performed generally well in this question. Part (i) was very well answered,
 with some partial answers in (i)(b) where many candidates observed a relationship in
 individual years without drawing out the overall trend. Answers in part (ii) were also
 satisfactory. Note that in part (ii) the princomp() function can alternatively be used in R.
 
-\end{document}
+
