--- a/00-C1/03-Part3.Rmd
+++ b/00-C1/03-Part3.Rmd
@@ -1,82 +1,53 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
 
-\setcounter{MaxMatrixCols}{10}
 
-\begin{document}
-\Large 
+* *  Use the command \texttt{set.seed(2019)} to initialise the random number generator.
 
-\begin{itemize}
-    \item Use the command \texttt{set.seed(2019)} to initialise the random number generator.
-
-    \item When you execute any R code, make sure you run the entire R script including the line \texttt{set.seed(2019)} .
-\end{itemize}
-\begin{framed}\begin{verbatim}
+* *  When you execute any R code, make sure you run the entire R script including the line \texttt{set.seed(2019)} .
+```{r}
 sample(1:6,10,replace=TRUE)
 
 set.seed(2019)
 sample(1:6,10,replace=TRUE)
-\end{verbatim}\end{framed}
-\newpage 
+```
+
 \begin{center}
-\includegraphics[scale=0.5]{00-C1/images/00-C1-Q3-Setseed.png}    
+\includegraphics[scale=0.5]{00-C1/images/00-C1-Q3-Setseed.png}* 
 \end{center}
 
 
-\newpage 
 
-\subsection*{Exercise 1}
 
-\noindent Consider a random sample $X_1 , \ldots , X_n$ from an Exponential distribution with parameter $\lambda$ and define 
+Exercise 1}
+
+Consider a random sample $X_1 , \ldots , X_n$ from an Exponential distribution with parameter $\lambda$ and define 
 $$ Y = \sum^{n}_{i=1} X_i $$
 
-\noindent State the distribution of $Y$, giving all the parameters of the distribution.
+State the distribution of $Y$, giving all the parameters of the distribution.
 
 
-%%%%%%%%%%%%%%%%%%%%%%
-\begin{framed}
+
+
 \large 
-\noindent Theory
-\begin{itemize}
-    \item The sum of $n$ exponential ($\lambda$) random variables is a gamma ($n, \lambda$) random variable.
-    \item The rate parameter is usually denoted as $\beta$ for the Gamma Distribution, i.e. gamma ($n, \beta$) 
+Theory
 
- \item Mean for Gamma Distribution	 ${\displaystyle {\frac {\alpha }{\beta }}} $
+* *  The sum of $n$ exponential ($\lambda$) random variables is a gamma ($n, \lambda$) random variable.
+* *  The rate parameter is usually denoted as $\beta$ for the Gamma Distribution, i.e. gamma ($n, \beta$) 
 
-\item Variance	for Gamma Distribution $ {\displaystyle {\frac {\alpha }{\beta ^{2}}}}$
+ *  Mean for Gamma Distribution	 ${\displaystyle {\frac {\alpha }{\beta }}} $
 
-    \item If the exponential random variables have a common rate parameter, their sum has an Erlang distribution, a special case of the gamma distribution.
-\end{itemize}
-\end{framed}
+*  Variance	for Gamma Distribution $ {\displaystyle {\frac {\alpha }{\beta ^{2}}}}$
 
-\noindent The distribution of $Y$ is a Gamma distribution,
+* *  If the exponential random variables have a common rate parameter, their sum has an Erlang distribution, a special case of the gamma distribution.
+
+
+The distribution of $Y$ is a Gamma distribution,
 $$Y \sim \mbox{Gamma}(n, \lambda)$$
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
 
-\begin{framed}
-\begin{verbatim}
+
+
+
+```{r}
 set.seed(2019);rexp(5,0.5)
 
 set.seed(2019);sum(rexp(5,0.5))
@@ -88,19 +59,19 @@ mean(X)
 
 var(X)
 
-\end{verbatim}
-\end{framed}
+```
 
-\newpage 
+
+
 \includegraphics[scale=0.5]{00-C1/images/00-C1-Q3-2.png}
-\newpage 
-\subsection*{Exercise 2}
+
+Exercise 2}
 
 Perform simulation of a sample $x_1 , ..., x_n$ with sample size n = 15 from an
 exponential distribution with parameter $\lambda = 2$.
 
 
-\begin{framed}\begin{verbatim}
+```{r}
 n = 15
 lambda = 2
 set.seed(2019);X = rexp(n, lambda)
@@ -114,32 +85,32 @@ var(X)
 sum(X) 
 
 
-\end{verbatim}\end{framed}
+```
 
 
 
 
 
-\newpage 
 
-\subsection*{Exercise 3}
+
+Exercise 3}
 
 Calculate the value of Y for the sample in part 2.
 
-\begin{framed}\begin{verbatim}
+```{r}
 Y = sum(X)
-\end{verbatim}\end{framed}
+```
 
 
 
-\newpage 
-\subsection*{Exercise 4}
-\noindent Perform 1,000 repetitions of parts 2 and 3 to obtain a Bootstrap sample
+
+Exercise 4}
+Perform 1,000 repetitions of parts 2 and 3 to obtain a Bootstrap sample
 $y_1 , ..., y_B$ from the random variable Y with B = 1,000.
 
 
-\noindent Using \texttt{for} loops.
-\begin{framed}\begin{verbatim}
+Using \texttt{for} loops.
+```{r}
 y = 0*(1:1000) # generate a vector of size 1000
 
 for (i in 1:1000){
@@ -147,117 +118,116 @@ for (i in 1:1000){
    y[i] = sum(rexp(n, lambda))
 
 } 
-\end{verbatim}\end{framed}
+```
 
-\noindent Using \texttt{replicate()}
-\begin{framed}\begin{verbatim}
+Using \texttt{replicate()}
+```{r}
 
 y = replicate(1000, sum(rexp(n, lambda)))
 
-\end{verbatim}\end{framed}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newpage 
-\subsection*{Exercise  5}
+```
+=====================================%
+
+Exercise  5}
 
 Plot a histogram showing the relative frequencies of the sample $y_1 , ..., y_B$  from
 part 4.
 
-\begin{framed}\begin{verbatim}
+```{r}
 hist(y, prob=TRUE) 
-\end{verbatim}\end{framed}
+```
 
 
 \includegraphics[scale=0.55]{00-C1/images/00-C1-Q3-Hist.png}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
-\newpage
+=====================================5
 
-\subsection*{Exercise 6}
-\noindent Compare graphically the histogram in part 4 to the density of a
+
+Exercise 6}
+Compare graphically the histogram in part 4 to the density of a
 suitable Normal distribution. You might find the following R command
 useful:
 
-\begin{framed}\begin{verbatim}
+```{r}
 curve(dnorm(x,mean= ...., sd= ... , 
-    add=TRUE, 
-    lwd=2,
-    col="red"))
-\end{verbatim}\end{framed}
+* add=TRUE, 
+* lwd=2,
+* col="red"))
+```
 
 
-\begin{framed}\begin{verbatim}
+```{r}
 hist(y,prob=TRUE,
-     xlim=c(0,20),
-     ylim=c(0,0.25))
+*  xlim=c(0,20),
+*  ylim=c(0,0.25))
 
 curve(dnorm(x,
-            mean=n/lambda,
-            sd=sqrt(n/(lambda^2))), 
-      add=TRUE, lwd=2, col="red")
+ mean=n/lambda,
+ sd=sqrt(n/(lambda^2))), 
+*   add=TRUE, lwd=2, col="red")
 
-\end{verbatim}\end{framed}
+```
 
 \includegraphics[scale=0.6]{00-C1/images/00-C1-Q3-Curve.png}
 
-\newpage
 
-\begin{framed}\begin{verbatim}
+
+```{r}
 hist(y,prob=TRUE,
-     xlim=c(0,20),
-     ylim=c(0,0.225),
-     col=c("pink","lightblue"))
+*  xlim=c(0,20),
+*  ylim=c(0,0.225),
+*  col=c("pink","lightblue"))
 
 curve(dnorm(x,
-            mean=n/lambda,
-            sd=sqrt(n/(lambda^2))), 
-      add=TRUE, lwd=2.75, 
-      col="red")
+ mean=n/lambda,
+ sd=sqrt(n/(lambda^2))), 
+*   add=TRUE, lwd=2.75, 
+*   col="red")
 
 
-\end{verbatim}\end{framed}
+```
 
 \includegraphics[scale=0.6]{00-C1/images/00-C1-Q3-Curve-2.png}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%555
-\newpage 
+555
 
-\noindent Comment on your findings in the context of the Central
+
+Comment on your findings in the context of the Central
 Limit Theorem.
 
-\begin{itemize}
-    \item In contrast to a normal distribution, the histogram is clearly not symmetrical.
 
-\item This comes from the fact that $Y$ can take only positive values.
+* *  In contrast to a normal distribution, the histogram is clearly not symmetrical.
+
+*  This comes from the fact that $Y$ can take only positive values.
 For a larger sample size of $n$ of $x_1 , ... , x_n$ (not a larger B) the CLT ensures that the
 distribution of $Y$ becomes approximately normal.
-\end{itemize}
 
-\newpage
-\begin{framed}
-\begin{verbatim}
+
+
+```{r}
 n = 75
 lambda = 2
 set.seed(2019)
 y = replicate(1000, sum(rexp(n, lambda)))
 
 hist(y,prob=TRUE,
-     xlim=c(20,60),
-     ylim=c(0,0.10),
-     col=c("pink","lightblue"))
+*  xlim=c(20,60),
+*  ylim=c(0,0.10),
+*  col=c("pink","lightblue"))
 
 curve(dnorm(x,
-            mean=n/lambda,
-            sd=sqrt(n/(lambda^2))), 
-      add=TRUE, lwd=2.75, 
-      col="red")
+ mean=n/lambda,
+ sd=sqrt(n/(lambda^2))), 
+*   add=TRUE, lwd=2.75, 
+*   col="red")
 
-\end{verbatim}
-\end{framed}
-\newpage
+```
+
+
 \includegraphics[scale=0.5]{00-C1/images/00-C1-Q3-Curve-Q3.png}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%555
-\newpage 
+555
+
 Parts (i)-(iii) were generally very well answered. In part (iv) there was wide variation in
 the quality of the answers with various errors in the details of the code. 
 
