--- a/00-D2/04-Part4.Rmd
+++ b/00-D2/04-Part4.Rmd
@@ -1,32 +1,6 @@
 
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
-```R
+```{r}
 Q. 4)
 
 An life insurance company is selling Endowment, Pure Term and Unit Linked products
@@ -38,10 +12,10 @@ of 5000 . The sum assured are normally distributed with below parameters - Endow
 from the system and the sum assured of that policy is 75000.
 Page 2 of 4IAI
 
-i)
+1. 
 Create a sequence ranging from 30000 to 200000 with an increase of 5000 and plot the
 density functions of the above three distributions in a single graph.
-ii) Find the probability that the policy (75000 sum assured) comes from the Endowment
+2.  Find the probability that the policy (75000 sum assured) comes from the Endowment
 product portfolio and the probability that the policy comes from Unit Linked Product
 portfolio.
 
@@ -53,12 +27,12 @@ portfolio.
 ```
 
 
-```R
+```{r}
 
 Solution 4:
 
 [7 Marks]
-i)
+1. 
 y<-seq(30000,200000,5000)
 y
 FE<-dnorm(y,50000,10000)
@@ -78,9 +52,9 @@ lines(y,FUL,col="darkblue",lwd=2)
 ```
 
 
-```R
+```{r}
 
-ii)
+2. 
 PE<-0.8
 PPT<-0.05
 PUL<-0.15
