--- a/00-D2/06-Exercise6.Rmd
+++ b/00-D2/06-Exercise6.Rmd
@@ -1,30 +1,4 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
 
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
 Suppose the transition probabilities are a function of the age of a person. The transition
 probability of a person aged x moving:
 
@@ -35,14 +9,14 @@ probability of a person aged x moving:
 
 Assuming 100 is the maximum age. Calculate the probability of:
 
-i) Healthy person aged 30 will be in Sick state after 4 years.
+1.  Healthy person aged 30 will be in Sick state after 4 years.
 
-ii) Sick person aged 25 will be in Death state after 7 years.
-
-
+2.  Sick person aged 25 will be in Death state after 7 years.
 
 
-```R
+
+
+```{r}
 
 H2S<-function(x){ 0.007*x}
 H2D<-function(x){ 0.001*x}
@@ -54,7 +28,7 @@ S2D<-function(x){ 0.002*(100-x)}
 ```
 
 
-```R
+```{r}
 
 transmat<-function(x){
   M<-matrix(0,nrow=3,ncol=3)
@@ -74,7 +48,7 @@ transmat<-function(x){
 ```
 
 
-```R
+```{r}
 M
 ```
 
@@ -85,7 +59,7 @@ M
 
 
 
-```R
+```{r}
 
 n=30
 B<-c(1,0,0)
@@ -101,7 +75,7 @@ B
 
 
 
-```R
+```{r}
 
 
 > B
@@ -112,7 +86,7 @@ B
 Hence the probability of Healthy person aged 30 will be in Sick state after 4 years is 0.2608138.
 
 [9]
-ii)
+2. 
 n=25
 C<-c(0,1,0)
 for (i in 1:7){
