--- a/00-E2-CS2B-FIA-September-2020/01-Exercise1.Rmd
+++ b/00-E2-CS2B-FIA-September-2020/01-Exercise1.Rmd
@@ -1,33 +1,17 @@
-\documentclass[a4paper,12pt]{article}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\usepackage{eurosym}
-\usepackage{vmargin}
-\usepackage{amsmath}
-\usepackage{graphics}
-\usepackage{epsfig}
-\usepackage{enumerate}
-\usepackage{multicol}
-\usepackage{subfigure}
-\usepackage{fancyhdr}
-\usepackage{listings}
-\usepackage{framed}
-\usepackage{graphicx}
-\usepackage{amsmath}
-\usepackage{chngpage}
-%\usepackage{bigints}
-
-\usepackage{vmargin}
-% left top textwidth textheight headheight
-% headsep footheight footskip
-\setmargins{2.0cm}{2.5cm}{16 cm}{22cm}{0.5cm}{0cm}{1cm}{1cm}
-\renewcommand{\baselinestretch}{1.3}
-
-\setcounter{MaxMatrixCols}{10}
-
-\begin{document}
-
-\large 
-\noindent An actuary is investigating the asymptotic behaviour of the sample autocorrelation function for two time series models. 
 
 
-(i)Generate, using a random number generator seed of 967, a simulated sequence of n = 200 observations for a first-order moving average process with parameter β1=0.4, assigning the simulated values to a vector called YMA.  [2] (ii)Generate, using a random number generator seed of 967, a simulated sequence of n = 200 observations for a first-order autoregressive model with parameter α1=0.45, assigning the simulated values to a vector called YAR. [2] (iii)Plot, on four separate graphs, the sample autocorrelation function (sample ACF) and sample partial autocorrelation function (sample PACF) for each of the two time series models, YMA and YAR, generated in parts (i) and (ii).   [6] (iv)Comment on the general features of the plots in part (iii) with reference to whether they are consistent with the theoretical behaviour of the corresponding functions for the true models. [4] The acf() function in R can also provide a vector output of the sample ACF values, with component i giving the sample ACF at lag i – 1, provided that the plot argument of the function is set to ‘FALSE’.  (v)Determine the numerical values for the sample ACF at lag 2, for each of the two time series models, YMA and YAR, generated in parts (i) and (ii). [2] (vi)Construct R code that  first sets a random number generator seed of 967; and thengenerates 1,000 random vectors (of length n = 200) for each of the twomodels in parts (i) and (ii); andassigns the values of the sample ACF at lag 2 for each random vector totwo vectors ACF2MA and ACF2AR (each of length 1,000).[8](vii)Determine the mean and variance of the two vectors, ACF2MA and ACF2AR, generated in part (vi). [3] (viii)Plot, on two separate graphs, the histograms of the two vectors, ACF2MA and ACF2AR, generated in part (vi). [4] (ix)Comment on the results in parts (vii) and (viii), including whether they agree with the expected asymptotic behaviour. [9] [Total 40] 
+An actuary is investigating the asymptotic behaviour of the sample autocorrelation function for two time series models. 
+
+
+(1. Generate, using a random number generator seed of 967, a simulated sequence of n = 200 observations for a first-order moving average process with parameter β1=0.4, assigning the 
+simulated values to a vector called YMA.  [2] (2. Generate, using a random number generator seed of 967, a simulated sequence of n = 200 observations for a first-order autoregressive model 
+with parameter α1=0.45, assigning the simulated values to a vector called YAR. [2] 
+3.  Plot, on four separate graphs, the sample autocorrelation function (sample ACF) and sample partial autocorrelation function (sample PACF) for each of the two time series models, YMA and YAR, generated 
+in parts (1.  and (2. .   [6] (iv)Comment on the general features of the plots in part 3.  
+
+ with reference to whether they are consistent with the theoretical behaviour of the corresponding functions for the true models. 
+ 
+ he acf() function in R can also provide a vector output of the sample ACF values, with component i giving the sample ACF at lag i – 1, provided that the plot argument of the function is set to ‘FALSE’. 
+  (v)Determine the numerical values for the sample ACF at lag 2, for each of the two time series models, YMA and YAR, generated in parts (1.  and (2. . [2] (
+  v1. Construct R code that  first sets a random number generator seed of 967; and thengenerates 1,000 random vectors (of length n = 200) for each of the twomodels in parts (1.  and (2. ; andassigns the values of the sample ACF at lag 2 for each random vector totwo vectors ACF2MA and ACF2AR (each of length 1,000).[8](v2. Determine the mean and variance of the two vectors, ACF2MA and ACF2AR, generated in part (v1. . [3] (vi2. Plot, on two separate graphs, the histograms of the two vectors, ACF2MA and ACF2AR, generated in part (v1. . [4] 
+(ix)Comment on the results in parts (v2.  and (vi2. , including whether they agree with the expected asymptotic behaviour. [9] [Total 40] 
